--- a/velowrench.UI/Views/Home/HomeView.axaml
+++ b/velowrench.UI/Views/Home/HomeView.axaml
@@ -107,7 +107,7 @@
                             </Button>
                             <Button Classes="SettingsItem"
                                     Command="{Binding NavigateToSelectedToolCommand}"
-                                    CommandParameter="{x:Static enums:EVeloWrenchTools.GearRatioCalculator}">
+                                    CommandParameter="{x:Static enums:EVeloWrenchTools.GearCalculator}">
                                 <Grid ColumnDefinitions="25,*,20">
                                     <materialIcons:MaterialIcon Grid.Column="0"
                                                                 Width="20" Height="20"
@@ -117,7 +117,7 @@
                                     <TextBlock Grid.Column="1"
                                                VerticalAlignment="Center"
                                                Classes="SettingsItemText"
-                                               Text="{x:Static res:Languages.GearRatioCalculator}" />
+                                               Text="{x:Static res:Languages.GearCalculator}" />
                                     <materialIcons:MaterialIcon Grid.Column="2"
                                                                 Width="20" Height="20"
                                                                 HorizontalAlignment="Center" VerticalAlignment="Center"
